<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingBottom="30dp"
    tools:context=".ui.view.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image_register"
            android:src="@drawable/img_register"
            android:transitionName="imgLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_lengkapi_data_diri"
            android:textSize="18sp"
            android:transitionName="tvWelcome"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/img_register" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_name"
            android:transitionName="tvLogin"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_register" />

        <com.mc7.mystoryapp.ui.customview.MyEditTextName
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="16dp"
            android:drawableTint="?attr/colorSecondary"
            android:inputType="textPersonName"
            android:transitionName="edtName"
            android:hint="@string/input_your_name"
            app:layout_constraintEnd_toEndOf="@+id/img_register"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_email"
            android:transitionName="tvEmail"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <com.mc7.mystoryapp.ui.customview.MyEditTextEmail
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="16dp"
            android:drawableTint="?attr/colorSecondary"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:transitionName="edtEmail"
            app:layout_constraintEnd_toEndOf="@+id/img_register"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_password"
            android:transitionName="tvPass"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <com.mc7.mystoryapp.ui.customview.MyEditTextPassword
            android:id="@+id/edt_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="16dp"
            android:drawableTint="?attr/colorSecondary"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:transitionName="edtPass"
            app:layout_constraintEnd_toEndOf="@+id/img_register"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:text="@string/txt_daftar_now"
            android:transitionName="btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/img_register"
            app:layout_constraintStart_toStartOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_login_ya"
            android:transitionName="tvDaftar"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>